kafkatune (#59)
* chore: initail project setup with web and jpa

* assign:highest salary

* feat: add PostgreSQL dependency, Docker Compose configuration, and application.yml settings

* chore: add initial Spring Boot microservice package structure for product service

* feat: implement product entity, dto and its mapper

* feat: implement service layer

* feat: implement products api end points

* feat: implement global exception handling

* feat: implement request validation with its exception handling

* fix: resolve product update issue

* refactor:refactor the product controller

* feat: add opentelemetry integration

* feat: implement kafka write message to topic

* feat: add product page with refractor on api

* fix: product api bug fixed

* fix: fix isses in product page

* feat: split product entity, add cart, category, productimage and mapper between entity dto

* feat: add product page

* feat: add service with admin and user apis

* feat: add product-cart-page with cart features

* feat: integrate cart backend to cart page

* feat: integrate redis, apply caching to get all  products

* refractor: multi environment configs

* feat: create get produts for list of ids

* feat: implement product service test with unit testing, integration testing, code coverage

* feat: add api documentation with open api

* modifed user-microservice and its tests to accomodate the new role value

* fix(gateway): resolve 401 unauthorized in security tests

- Added httpBasic().disable() to suppress default Spring login
- Mocked JwtWebFilter to pass through the filter chain
- Moved /api/v1 versioning to test properties to fix bean lifecycle issues

* Added jenkins file so jenkins can run ci pipelines

* Updated gitingore files.

* Fixed kafka in payment service to be thin as possible rely on yaml config

* modified docker and compose for microservice health

* patched dockerfile

* modifed jenkins

* Fixed kafka in payment service to be thin as possible rely on yaml config

* 